[tool.poetry]
name = "servo-vegeta"
version = "0.1.0"
description = "Opsani Servo plugin for the Vegeta load testing tool."
authors = ["Blake Watters <blake@opsani.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
